Bug 396270 - End of a break notification does not work until "Skip Break" button is pressed
Summary: End of a break notification does not work until "Skip Break" button is pressed
Status: RESOLVED FIXED
Alias: None
Product: rsibreak
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.12.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Astals Cid
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-07 00:24 UTC by Dmitry
Modified: 2018-07-28 21:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry 2018-07-07 00:24:19 UTC
I have enabled notifications for "End of long break" and "End of short break", so they play a sound and show popup. But they work only if "Skip Break" button is pressed during a break. Otherwise, when the break is over, they don't play any sound and don't show any popup.

I need this functionality to hear the sound when the break is over, so I can return to the computer.
Comment 1 Albert Astals Cid 2018-07-19 20:42:23 UTC
Danial patches broke this, I'll contact him and ask if he can fix it.
Comment 2 Albert Astals Cid 2018-07-28 21:34:50 UTC
Git commit 28f65ddcddb47ea368e00ff829c851a0fc268f88 by Albert Astals Cid, on behalf of Danial Klimkin.
Committed on 28/07/2018 at 21:32.
Pushed by aacid into branch 'master'.

Quick fix for no end-of-break events

M  +1    -0    src/rsitimer.cpp

https://commits.kde.org/rsibreak/28f65ddcddb47ea368e00ff829c851a0fc268f88