Quick fix for no end-of-break events

BUG: 396270